//16 ((bf))