@@ -3,14 +3,21 @@ package ru.stqa.pft.addressbook.tests;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import com.thoughtworks.xstream.XStream;
-import org.testng.annotations.*;
+import org.openqa.selenium.By;
+import org.testng.annotations.DataProvider;
+import org.testng.annotations.Test;
 import ru.stqa.pft.addressbook.model.GroupData;
 import ru.stqa.pft.addressbook.model.Groups;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileReader;
+import java.io.IOException;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import static java.lang.String.format;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 
@@ -18,24 +25,26 @@ public class GroupCreationTests extends TestBase {
 
     @DataProvider
     public Iterator<Object[]> validGroupsFromXml() throws IOException {
-        try (BufferedReader reader = new BufferedReader(new FileReader("src/test/resources/groups.xml"))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader(new File("./src/test/resources/groups.xml")))) {
             String xml = "";
             String line = reader.readLine();
             while (line != null) {
                 xml += line;
                 line = reader.readLine();
             }
-            XStream xStream = new XStream();
-            xStream.processAnnotations(GroupData.class);
-            xStream.allowTypes(new Class[]{GroupData.class});
-            List<GroupData> groups = (List<GroupData>) xStream.fromXML(xml);
-            return groups.stream().map(g -> new Object[]{g}).toList().iterator();
+            XStream xstream = new XStream();
+            xstream.allowTypesByWildcard(new String[]{
+                    "ru.stqa.pft.addressbook.model.GroupData"
+            });
+            xstream.processAnnotations(GroupData.class);
+            List<GroupData> groups = (List<GroupData>) xstream.fromXML(xml);
+            return groups.stream().map((g) -> new Object[]{g}).collect(Collectors.toList()).iterator();
         }
     }
 
     @DataProvider
     public Iterator<Object[]> validGroupsFromJson() throws IOException {
-        try (BufferedReader reader = new BufferedReader(new FileReader("src/test/resources/groups.json"))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader(new File("./src/test/resources/groups.json")))) {
             String json = "";
             String line = reader.readLine();
             while (line != null) {
@@ -43,32 +52,41 @@ public class GroupCreationTests extends TestBase {
                 line = reader.readLine();
             }
             Gson gson = new Gson();
-            List<GroupData> groups = gson.fromJson(json, new TypeToken<List<GroupData>>(){}.getType()); //List<GroupData>.class
-            return groups.stream().map(g -> new Object[]{g}).toList().iterator();
+            List<GroupData> groups = gson.fromJson(json, new TypeToken<List<GroupData>>() {
+            }.getType());
+            return groups.stream().map((g) -> new Object[]{g}).collect(Collectors.toList()).iterator();
         }
     }
 
-    @Test(dataProvider = "validGroupsFromXml", enabled = true)
-    public void testGroupCreation(GroupData group) throws Exception {
+    @Test(dataProvider = "validGroupsFromJson")
+    public void testGroupCreation(GroupData groupData) {
         app.goTo().groupPage();
         Groups before = app.db().groups();
-        app.group().create(group);
+        app.group().create(groupData);
+        app.wd.findElement(By.xpath(format("//span[text()='%s']", groupData.getName()))).isDisplayed();
+
         assertThat(app.group().count(), equalTo(before.size() + 1));
+
         Groups after = app.db().groups();
-        assertThat(after, equalTo(
-                before.withAdded(group.withId(after.stream().mapToInt((g) -> g.getId()).max().getAsInt()))));
+
+        assertThat(after,
+                equalTo(before.withAdded(groupData.withId(after.stream().mapToInt((g) -> g.getId()).max().getAsInt()))));
+
+        verifyGroupListInUI();
     }
 
-    @Test(enabled = false)
-    public void testBadGroupCreation() throws Exception {
+    @Test
+    public void testBadGroupCreation() {
         app.goTo().groupPage();
-        Groups before = app.group().all();
-        GroupData group = new GroupData().withName("test1'");
-        app.group().create(group);
-        assertThat(app.group().count(), equalTo(before.size()));
-        Groups after = app.group().all();
-        assertThat(after, equalTo(before));
-        verifyGroupListInUI(); //В конфигурации запуска -DverifyUI=true
-    }
+        Groups before = app.db().groups();
+        GroupData groupData = new GroupData().withName("test2'");
+        app.group().create(groupData);
 
+        assertThat(app.group().count(), equalTo(before.size()));
+
+        Groups after = app.db().groups();
+
+        assertThat(after, equalTo(before));
+        verifyGroupListInUI();
+    }
 }
