@@ -4,10 +4,12 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 import com.thoughtworks.xstream.XStream;
+import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import ru.stqa.pft.addressbook.model.ContactData;
 import ru.stqa.pft.addressbook.model.Contacts;
+import ru.stqa.pft.addressbook.model.GroupData;
 import ru.stqa.pft.addressbook.model.Groups;
 
 import java.io.BufferedReader;
@@ -16,83 +18,69 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-@SuppressWarnings("unchecked")
 public class NewContactCreationTests extends TestBase {
 
     @DataProvider
     public Iterator<Object[]> validContactsFromXml() throws IOException {
-        try (BufferedReader reader = new BufferedReader(new FileReader("src/test/resources/contacts.xml"))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader
+                (System.getProperty("file.contactsXML", "./src/test/resources/contacts.xml")))) {
             String xml = "";
             String line = reader.readLine();
             while (line != null) {
                 xml += line;
                 line = reader.readLine();
             }
-            XStream xStream = new XStream();
-            xStream.processAnnotations(ContactData.class);
-            xStream.allowTypes(new Class[]{ContactData.class});
-            List<ContactData> contacts = (List<ContactData>) xStream.fromXML(xml);
-            return contacts.stream().map(g -> new Object[]{g}).toList().iterator();
+            XStream xstream = new XStream();
+            xstream.allowTypesByWildcard(new String[]{
+                    "ru.stqa.pft.addressbook.model.ContactData"
+            });
+            xstream.processAnnotations(ContactData.class);
+            List<ContactData> contacts = (List<ContactData>) xstream.fromXML(xml);
+            return contacts.stream().map((g) -> new Object[]{g}).collect(Collectors.toList()).iterator();
         }
     }
 
     @DataProvider
     public Iterator<Object[]> validContactsFromJson() throws IOException {
-        try (BufferedReader reader = new BufferedReader(new FileReader("src/test/resources/contacts.json"))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader
+                (System.getProperty("file.contactsJSON", "./src/test/resources/contacts.json")))) {
             String json = "";
             String line = reader.readLine();
             while (line != null) {
                 json += line;
                 line = reader.readLine();
             }
-            Gson gson = new GsonBuilder().excludeFieldsWithoutExposeAnnotation().create();
+            Gson gson = new Gson();
             List<ContactData> contacts = gson.fromJson(json, new TypeToken<List<ContactData>>() {
             }.getType());
-            return contacts.stream().map(c -> new Object[]{c}).toList().iterator();
+            return contacts.stream().map((g) -> new Object[]{g}).collect(Collectors.toList()).iterator();
         }
     }
 
-    @Test(dataProvider = "validContactsFromJson", enabled = true)
-    public void testContactCreation(ContactData contact) throws Exception {
+    @BeforeMethod
+    public void checkForGroupToExist(){
+        if (app.db().groups().size() == 0) {
+            app.goTo().groupPage();
+            app.group().create(new GroupData().withName("test1").withHeader("test2").withFooter("test3"));
+        }
+    }
+
+    @Test(dataProvider = "validContactsFromJson")
+    public void testContactCreation(ContactData contactData) {
         app.goTo().homePage();
         Contacts before = app.db().contacts();
-        File photo = new File("src/test/resources/AvatarPhoto.jpg");
-        app.contact().create(contact.withPhoto(photo));
+        app.contact().initContactCreation();
+        app.contact().createContactWithGroup(contactData);
+        app.contact().checkerForContactExists(contactData);
         Contacts after = app.db().contacts();
+
         assertThat(after.size(), equalTo(before.size() + 1));
-
-        assertThat(after,
-                equalTo(before.withAdded(contact.withId(after.stream().mapToInt((g) -> g.getId()).max().getAsInt()))));
-    }
-
-    @Test(enabled = false)
-    public void testBadContactCreation() throws Exception {
-        Groups groups = app.db().groups();
-        File photo = new File("src/test/resources/AvatarPhoto.jpg");
-        ContactData newContact = new ContactData().withFirstname("marina").withLastname("m").withMiddlename("alieva")
-                .withMobilePhone("977-302").withHomePhone("977-303").withWorkPhone("977-304")
-                .withAddress("msk").withPhoto(photo)
-                .inGroup(groups.iterator().next());
-        app.goTo().homePage();
-        Contacts before = app.contact().all();
-        app.contact().create(newContact);
-        assertThat(app().contact().count(), equalTo(before.size()));
-        Contacts after = app.contact().all();
-        assertThat(after, equalTo(before));
-    }
-
-    @Test(enabled = false)
-    public void testCurrentDir() {
-        File currentDir = new File(".");
-        System.out.println(currentDir.getAbsolutePath());
-        File photo = new File("src/test/resources/AvatarPhoto.jpg");
-        System.out.println(photo.getAbsolutePath());
-        System.out.println(photo.exists());
-        verifyContactListInUI(); //В конфигурации запуска -DverifyUI=true
+        assertThat(after, equalTo(before.withAdded(contactData.withId(after.stream().mapToInt((g) -> g.getId()).max().getAsInt()))));
+        verifyContactListInUI();
     }
 }
-
